--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,6 +8,7 @@
    z-index: 100;
 }
 
+/* logo amazon start  */
 .header__logo {
   width: 100px;
   object-fit: contain;
@@ -15,6 +16,9 @@
   margin-top:  18px;
 }
 
+/* logo amazon end  */
+
+/* search input start */
 .header__search{
   display: flex;
   flex: 1;
@@ -23,9 +27,54 @@
 
 }
 
+.header__searchInput {
+height: 12px;
+padding: 10px;
+border: none;
+width: 100%;
+}
+
 .header__searchIcon {
   padding: 5px;
   height: 22px !important;
   background-color: #cd9042;
+
 }
 
+/* search input end */
+
+/* options start */
+
+.header__nav{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header__option{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
+}
+
+.header__optionLineOne {
+  font-size: 10px;
+}
+
+.header__optionLineTwo {
+  font-size: 13px;
+  font-weight: 800;
+}
+
+.shopping_cart{
+  color: white;
+}
+
+.header__optionBasket{
+  color: white;
+  display: flex;
+  align-items: center;
+    padding-right: 30px ;
+}
+/* options end */
