background align color to product componanet

--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 10px;
+  margin-top: 50px;
   padding: 20px;
   width: 100%;
   max-height: 400px;
@@ -34,6 +35,8 @@
 }
 
 .product__info{
+
   height: 100px;
   margin-bottom: 15px;
 }
+
