--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  margin: 10px;
   margin-bottom: 10px;
   margin-top: 50px;
   padding: 20px;
