--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -5,13 +5,16 @@
   justify-content: flex-end;
   margin: 10px;
   margin-bottom: 10px;
-  margin-top: 50px;
   padding: 20px;
   width: 100%;
   max-height: 400px;
   min-width: 100px;
   background-color: white;
   z-index: 1;
+}
+
+.product_container{
+  margin-top: 150px;
 }
 
 
@@ -41,3 +44,6 @@
   margin-bottom: 15px;
 }
 
+.product_rating{
+  display: flex;
+}
