--- a/src/styles/Checkout.css
+++ b/src/styles/Checkout.css
@@ -1,3 +1,11 @@
+.checkout {
+  display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
+}
+
 .checkout_left img{
   width: 100%;
+  margin-bottom: 10px;
  }
