--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,3 +1,18 @@
+.login{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+
+}
+
+
+
 .login__logo{
   margin-top: 20px;
+  margin-bottom: 20px;
+  object-fit: cover;
+  width: 100px;
+  margin-right: auto;
+  margin-left: auto;
 }
