--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -20,3 +20,12 @@
   margin: 0 20px;
   border-bottom: 1px solid lightgray;
 }
+
+.payment__title{
+  flex: 0.2;
+}
+
+.payment__address, .payment__items{
+  flex: 0.8;
+}
+
