--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -25,7 +25,8 @@
   flex: 0.2;
 }
 
-.payment__address, .payment__items{
+.payment__address, .payment__items, .payment__details{
   flex: 0.8;
 }
+
 
